[gd_scene load_steps=4 format=3 uid="uid://cr88v56lgn1e0"]

[ext_resource type="Script" uid="uid://cd7ss0pbbpjga" path="res://ui/menu/menu.gd" id="1_bwjgb"]
[ext_resource type="Texture2D" uid="uid://cfxn5ojrmd28h" path="res://ui/menu/background.png" id="2_udkah"]
[ext_resource type="Theme" uid="uid://biaurqe4nyg8j" path="res://ui/theme/theme.tres" id="3_4c782"]

[node name="Menu" type="CanvasLayer"]
script = ExtResource("1_bwjgb")

[node name="Background" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_udkah")

[node name="Panel" type="PanelContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -76.0
offset_right = 76.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_4c782")

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="Container" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2

[node name="StartButton" type="Button" parent="Panel/MarginContainer/Container"]
unique_name_in_owner = true
layout_mode = 2
text = "Start"

[node name="LevelSelectLabel" type="Label" parent="Panel/MarginContainer/Container"]
layout_mode = 2
text = "Level Select"
horizontal_alignment = 1

[node name="LevelSelectInput" type="LineEdit" parent="Panel/MarginContainer/Container"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/caret_color = Color(0, 0, 0, 0)
placeholder_text = "password"
max_length = 8
expand_to_text_length = true
context_menu_enabled = false
emoji_menu_enabled = false
shortcut_keys_enabled = false
middle_mouse_paste_enabled = false
selecting_enabled = false

[node name="QuitButton" type="Button" parent="Panel/MarginContainer/Container"]
unique_name_in_owner = true
layout_mode = 2
text = "Quit"
